[Bug fix] Fix layout bug in home screen, show on chrome. Chrome does not support .5 px so revised the border to 2px.

--- a/resources/home/css_include.css
+++ b/resources/home/css_include.css
@@ -1,6 +1,6 @@
 @import "modules.css";
 :root{
-    --home-content-border-width: 1px;
+    --home-content-border-width: 2px;
     --home-content-border-color: rgba(255,255,255,.3);
 }
 
